# llm-council

./: .gitignore  FIXES_APPLIED.md  pyproject.toml
.github/: copilot-instructions.md
backend/: config.py  council.py  main.py  openrouter.py  storage.py  tokens.py
frontend/src/: App.jsx  api.js
frontend/src/components/: Settings.css  Settings.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage2.css  Stage2.jsx  Stage3.css  Stage3.jsx
